--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
     apply plugin: 'realm-android'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
